2008-11-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Still trying to read the subscribed 
	contacts details. Without code changes, I now get a non-null list of 
	contacts, either because I am using a newer telepathy-glib or because 
	I upgrade to Ubuntu Intrepid. However, the attribures GHashTable is empty 
	for all contacts. 

2008-09-31  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Trying to read the subscribed 
	contacts details.

2008-09-31  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Get the ContactsList interface, 
	though I do not yet know how to get details for each contact via 
	the handle.

2008-09-31  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/connect/: Added this as a copy of the current 
	list_contacts. Connecting is complex enough that it deserves its own 
	example, before we make it more complex by adding other stuff.

2008-09-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: printf the reason as text.

2008-09-29  Will Thompson  <will.thompson@collabora.co.uk>

	* docs/examples/list_contacts/main.c: Only disconnect when the connected 
	status has been received in the callback, so the connection actually 
	has a chance to happen.

2008-09-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Try to catch connection problems 
	via the status_changed callback. 

2008-09-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/: Added the beginnings of another example.
	So far it just tries to create the connection so it can later get the 
	contacts from it.

2008-09-26  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_all_protocols/main.c: Asynchronously introspect 
        the connection manager for the protocols information if necessary, 
	though this raises many more questions. 

2008-09-26  Murray Cumming  <murrayc@murrayc.com>
